[gd_scene load_steps=3 format=3 uid="ship_menu_scene_1"]

[ext_resource path="res://scripts/ui/ship_menu.gd" type="Script" id=1]

[node name="ShipMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Title" type="Label" parent="VBox"]
text = "Управление кораблём"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="ShipName" type="Label" parent="VBox"]
text = "Плот"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="InfoPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="VBoxInfo" type="VBoxContainer" parent="VBox/HBox/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HealthLabel" type="Label" parent="VBox/HBox/InfoPanel/VBoxInfo"]
text = "Прочность: 50 / 50"
theme_override_font_sizes/font_size = 16

[node name="SpeedLabel" type="Label" parent="VBox/HBox/InfoPanel/VBoxInfo"]
text = "Скорость: 3.0"
theme_override_font_sizes/font_size = 16

[node name="CargoLabel" type="Label" parent="VBox/HBox/InfoPanel/VBoxInfo"]
text = "Груз: 0 / 2"
theme_override_font_sizes/font_size = 16

[node name="CrewLabel" type="Label" parent="VBox/HBox/InfoPanel/VBoxInfo"]
text = "Экипаж: 1 / 1"
theme_override_font_sizes/font_size = 16

[node name="ModulesPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="VBoxModules" type="VBoxContainer" parent="VBox/HBox/ModulesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ModulesLabel" type="Label" parent="VBox/HBox/ModulesPanel/VBoxModules"]
text = "Модули:"
theme_override_font_sizes/font_size = 18

[node name="ModulesList" type="VBoxContainer" parent="VBox/HBox/ModulesPanel/VBoxModules"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBox"]
text = "Закрыть"

